alignment fix no. 2

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ header ul li{
     font-weight: 500;
     /* align-items: center; */
     padding-left: 10px;
-    padding-right: 30px;
+    padding-right: 20px;
 }
 
 .midOne h1{
